--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
@@ -15,25 +15,45 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="common.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="d01.hpp">
+    <ClInclude Include="problem_01.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="d02.hpp">
+    <ClInclude Include="problem_03.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="d03.hpp">
+    <ClInclude Include="problem.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="template.hpp">
+    <ClInclude Include="problem_02.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="01.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="01_TEST.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="02.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="02_TEST.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="03.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="03_TEST.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
