--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="problem_02.hpp" />
     <ClInclude Include="problem_03.hpp" />
     <ClInclude Include="problem.hpp" />
+    <ClInclude Include="problem_04.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="01.txt">
@@ -142,6 +143,8 @@
     <Text Include="02_TEST.txt" />
     <Text Include="03.txt" />
     <Text Include="03_TEST.txt" />
+    <Text Include="04.txt" />
+    <Text Include="04_TEST.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
