--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
@@ -133,6 +133,8 @@
     <ClInclude Include="problem_03.hpp" />
     <ClInclude Include="problem.hpp" />
     <ClInclude Include="problem_04.hpp" />
+    <ClInclude Include="problem_05.hpp" />
+    <ClInclude Include="problem_template.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="01.txt">
@@ -145,6 +147,8 @@
     <Text Include="03_TEST.txt" />
     <Text Include="04.txt" />
     <Text Include="04_TEST.txt" />
+    <Text Include="05.txt" />
+    <Text Include="05_TEST.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
