--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="problem_04.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="problem_05.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="problem_template.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="01.txt">
@@ -54,6 +60,12 @@
       <Filter>Resource Files</Filter>
     </Text>
     <Text Include="04.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="05_TEST.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="05.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
