--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="problem_06.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="problem_07.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utils.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="01.txt">
@@ -75,6 +81,12 @@
       <Filter>Resource Files</Filter>
     </Text>
     <Text Include="06.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="07_TEST.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="07.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
