--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="utils.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="problem_08.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="01.txt">
@@ -87,6 +90,12 @@
       <Filter>Resource Files</Filter>
     </Text>
     <Text Include="07.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="08_TEST.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="08.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
