--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="problem_06.hpp" />
     <ClInclude Include="problem_07.hpp" />
     <ClInclude Include="problem_08.hpp" />
+    <ClInclude Include="problem_09.hpp" />
     <ClInclude Include="problem_template.h" />
     <ClInclude Include="utils.hpp" />
   </ItemGroup>
@@ -159,6 +160,8 @@
     <Text Include="07_TEST.txt" />
     <Text Include="08.txt" />
     <Text Include="08_TEST.txt" />
+    <Text Include="09.txt" />
+    <Text Include="09_TEST.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
