--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="problem_08.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="problem_09.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="01.txt">
@@ -96,6 +99,12 @@
       <Filter>Resource Files</Filter>
     </Text>
     <Text Include="08.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="09_TEST.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="09.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
