--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="grid.hpp" />
     <ClInclude Include="problem_01.hpp" />
     <ClInclude Include="problem_02.hpp" />
     <ClInclude Include="problem_03.hpp" />
@@ -138,6 +139,7 @@
     <ClInclude Include="problem_07.hpp" />
     <ClInclude Include="problem_08.hpp" />
     <ClInclude Include="problem_09.hpp" />
+    <ClInclude Include="problem_10.hpp" />
     <ClInclude Include="problem_template.h" />
     <ClInclude Include="utils.hpp" />
   </ItemGroup>
@@ -162,9 +164,13 @@
     <Text Include="08_TEST.txt" />
     <Text Include="09.txt" />
     <Text Include="09_TEST.txt" />
+    <Text Include="10_TEST.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="problem_10.cpp" />
+    <ClCompile Include="grid.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
