--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
@@ -128,7 +128,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cpu.hpp" />
+    <ClInclude Include="crt.hpp" />
     <ClInclude Include="grid.hpp" />
+    <ClInclude Include="op.hpp" />
     <ClInclude Include="problem_01.hpp" />
     <ClInclude Include="problem_02.hpp" />
     <ClInclude Include="problem_03.hpp" />
@@ -164,12 +167,13 @@
     <Text Include="08_TEST.txt" />
     <Text Include="09.txt" />
     <Text Include="09_TEST.txt" />
+    <Text Include="10.txt" />
     <Text Include="10_TEST.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cpu.cpp" />
+    <ClCompile Include="crt.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="problem_10.cpp" />
-    <ClCompile Include="grid.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
