--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="cpu.hpp" />
     <ClInclude Include="crt.hpp" />
     <ClInclude Include="grid.hpp" />
+    <ClInclude Include="monkey.hpp" />
     <ClInclude Include="op.hpp" />
     <ClInclude Include="problem_01.hpp" />
     <ClInclude Include="problem_02.hpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="problem_08.hpp" />
     <ClInclude Include="problem_09.hpp" />
     <ClInclude Include="problem_10.hpp" />
+    <ClInclude Include="problem_11.hpp" />
     <ClInclude Include="problem_template.h" />
     <ClInclude Include="utils.hpp" />
   </ItemGroup>
@@ -169,11 +171,13 @@
     <Text Include="09_TEST.txt" />
     <Text Include="10.txt" />
     <Text Include="10_TEST.txt" />
+    <Text Include="11_TEST.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpu.cpp" />
     <ClCompile Include="crt.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="monkey.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
