--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="Source Files\problem_10">
       <UniqueIdentifier>{b53c57cc-7379-4ea4-b997-f545a71faa69}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\problem_11">
+      <UniqueIdentifier>{23c45585-a97b-4b07-8d6b-c03eb6abb03b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\problem_11">
+      <UniqueIdentifier>{0d739824-451d-43d9-9744-07f230cc204a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="problem_01.hpp">
@@ -71,6 +77,12 @@
     </ClInclude>
     <ClInclude Include="crt.hpp">
       <Filter>Header Files\problem_10</Filter>
+    </ClInclude>
+    <ClInclude Include="problem_11.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="monkey.hpp">
+      <Filter>Header Files\problem_11</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -134,6 +146,9 @@
     <Text Include="10.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="11_TEST.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -147,6 +162,9 @@
     </ClCompile>
     <ClCompile Include="crt.cpp">
       <Filter>Source Files\problem_10</Filter>
+    </ClCompile>
+    <ClCompile Include="monkey.cpp">
+      <Filter>Source Files\problem_11</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
