--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClInclude Include="monkey.hpp">
       <Filter>Header Files\problem_11</Filter>
     </ClInclude>
+    <ClInclude Include="monkey_parser.hpp">
+      <Filter>Header Files\problem_11</Filter>
+    </ClInclude>
+    <ClInclude Include="monkey_collection.h">
+      <Filter>Header Files\problem_11</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="01.txt">
@@ -149,6 +155,9 @@
     <Text Include="11_TEST.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="11.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -164,6 +173,9 @@
       <Filter>Source Files\problem_10</Filter>
     </ClCompile>
     <ClCompile Include="monkey.cpp">
+      <Filter>Source Files\problem_11</Filter>
+    </ClCompile>
+    <ClCompile Include="monkey_parser.cpp">
       <Filter>Source Files\problem_11</Filter>
     </ClCompile>
   </ItemGroup>
