day 11 b - refactored the whole program, still not working

--- a/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
+++ b/Advent of code 2022/Advent of code 2022/Advent of code 2022.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="10\op.hpp" />
     <ClInclude Include="11\monkey.hpp" />
     <ClInclude Include="11\monkey_collection.h" />
+    <ClInclude Include="11\monkey_op.hpp" />
     <ClInclude Include="11\monkey_parser.hpp" />
     <ClInclude Include="grid.hpp" />
     <ClInclude Include="problem_01.hpp" />
